fix(BS-14705) On IE, the cross to clear the search field, clear the field but doesn't refresh the search
See https://github.com/angular/angular.js/issues/11193
Cross is hidden for search box on IE

Fixes [BS-14705](https://bonitasoft.atlassian.net/browse/BS-14705)

--- a/main/features/user/tasks/list/css/task-app.css
+++ b/main/features/user/tasks/list/css/task-app.css
@@ -158,6 +158,11 @@
   padding-left: 1.2em;
   padding-right:0;
 }
+
+.SearchBox-input::-ms-clear {
+   display: none;
+ }
+
 .SearchBox-icon {
   position:absolute;
   top:50%;
